--- a/KosaESS/src/main/resources/templates/manager/class_detail.html
+++ b/KosaESS/src/main/resources/templates/manager/class_detail.html
@@ -3,14 +3,15 @@
 <head th:replace="~{/include/manager_header :: header}">
 <meta charset="UTF-8">
 <title>Manager Class Detail</title>
-<link th:href="@{/css/managerClassList.css}" rel="stylesheet" />
-</head>
-<head>
 <link th:href="@{/css/manager_post_list.css}" rel="stylesheet">
+<link th:href="@{/css/student/header.css}" rel="stylesheet">
+<link th:href="@{/css/student/main.css}" rel="stylesheet">
+<link th:href="@{/css/student/class_detail.css}" rel="stylesheet">
+<link th:href="@{/css/class_list.css}" rel="stylesheet" />
 </head>
 <body>
 	<!-- 서브바 부분 -->
-	<div th:replace="~{/include/manager_subbar :: subbar}"></div>
+	<div th:replace="~{/include/manager_subbar_2 :: subbar}"></div>
 	<!-- End 서브바 -->
 
 	<!-- 컨텐츠 부분 -->
@@ -20,39 +21,57 @@
 		<!-- content wrap-->
 		<div class="content_wrap">
 			<!-- 검색 필터 부분 -->
-			<div class="search_filter_wrap"></div>
-			<table>
-				<tr>
-					<th>이름</th>
-					<th>지원 기간</th>
-					<th>교육 기간</th>
-					<th>교육 장소</th>
-					<th>교육 상태</th>
-					<th>시작 시간</th>
-					<th>종료 시간</th>
-					<th>수강 정원</th>
-					<th>업무담당자</th>
-				</tr>
-				<tr>
-					<td th:text="${clss.clssNm}"></td>
-					<td th:text="|${#dates.format(clss.aplyStartDt, 'yyyy-MM-dd')}  ~ ${#dates.format(clss.aplyEndDt, 'yyyy-MM-dd')}|"></td>
-					<td th:text="${clss.clssAdr}"></td>
-					<td th:text="${clss.clssCd}"></td>
-					<td th:text="${#dates.format(clss.setInTm, 'HH:mm')}"></td>
-					<td th:text="${#dates.format(clss.setOutTm, 'HH:mm')}"></td>
-					<td><a th:text="${clss.rgstCnt}" th:href="@{/manager/student?classId=__${clss.clssId}__}"></a><span th:text="|/ ${clss.limitCnt}|"></span></td>
-					<td th:text="${clss.mngrId}"></td>
-				</tr>
-			</table>
-			<div th:each="item:${NonImageFileInfoList}">
-				<a th:href="@{/manager/__${clss.fileId}__/__${item.fileSubId}__}" th:text="${item.fileNm}"></a>				
-			</div>
-			<div th:each="item:${imageFileSubIdList}">
-				<img th:src="@{/manager/__${clss.fileId}__/__${item}__}">
-			</div>
+			<div class="container" style="display: flex;">
+				<div style="width: 80%">
+					<div class="content">
+						<table style="border: 2px solid #0E5881;
+	border-collapse: collapse;
+	width: 80%;
+	margin-bottom: 5%;">
+							<tr>
+								<th>이름</th>
+								<td th:text="${clss.clssNm}"></td>
+							</tr>
+							<tr>
+								<th>지원 기간</th>
+								<td style="width: 35%" th:text="|${#dates.format(clss.aplyStartDt, 'yyyy-MM-dd')}  ~ ${#dates.format(clss.aplyEndDt, 'yyyy-MM-dd')}|"></td>
+								<th>교육 기간</th>
+								<td colspan="3" th:text="|${#dates.format(clss.clssStartDd, 'yyyy-MM-dd')}  ~ ${#dates.format(clss.clssEndDd, 'yyyy-MM-dd')}|"></td>
+							</tr>
+							<tr>
+								<th>교육 장소</th>
+								<td th:text="${clss.clssAdr}"></td>
+								<th>회사</th>
+								<td style="width: 15%" th:text="${clss.cmpyId}"></td>
+								<th>교육 상태</th>
+								<td th:text="${clss.clssCd}"></td>
+							</tr>
+							<tr>
+								<th>시작 시간</th>
+								<td th:text="${#dates.format(clss.setInTm, 'HH:mm')}"></td>
+								<th>종료 시간</th>
+								<td th:text="${#dates.format(clss.setOutTm, 'HH:mm')}"></td>
+								<th>수강 정원</th>
+								<td><a th:text="${clss.rgstCnt}"
+									th:href="@{/manager/student?classId=__${clss.clssId}__}"></a><span
+									th:text="|/ ${clss.limitCnt}|"></span></td>
+								<th>업무담당자</th>
+								<td th:text="${clss.mngrId}"></td>
+							</tr>
 
-			<div th:utext="${clss.clssContent}"></div>
-			<a th:href="@{/manager/class}" th:text="목록"></a>
+						</table>
+						<div th:each="item:${NonImageFileInfoList}">
+							<a th:href="@{/manager/__${clss.fileId}__/__${item.fileSubId}__}" th:text="${item.fileNm}"></a>
+						</div>
+						<div th:each="item:${imageFileSubIdList}">
+							<img th:src="@{/manager/__${clss.fileId}__/__${item}__}">
+						</div>
+
+						<div th:utext="${clss.clssContent}"></div>
+						<a th:href="@{/manager/class}" th:text="목록"></a>
+					</div>
+				</div>
+			</div>
 		</div>
 	</div>
 </body>
