--- a/KosaESS/src/main/resources/templates/manager/student_list.html
+++ b/KosaESS/src/main/resources/templates/manager/student_list.html
@@ -23,49 +23,15 @@
 		<div class="content_wrap">
 			<!-- 검색 필터 부분 -->
 			<div class="search_filter_wrap">
-				<!-- 아이콘 삽임 부분 -->
-				<!-- 				<div class="search_filter_icon"> -->
-				<!-- 					<img class="search_filter_icon_img" th:src="@{/img/filter.png}"> -->
-				<!-- 				</div> -->
-				<!-- 아이콘 삽임 부분 -->
 				<!-- 검색 필터 테이블 -->
 				<div class="search_filter_table_wrap">
 					<table class="search_filter_table" style="width: 100%;">
 						<tr>
 							<td style="width: 10%;">교육과정명</td>
-							<td style="width: 30%;"><select id="classId">
-									<option th:each="className:${classNameList}"
-										th:text="${className.clssNm}" th:value="${className.clssId}"></option>
-							</select></td>
-							<td style="width: 10%;">상태</td>
-							<td style="width: 50%;">
-								<!--리스트 전체선택 1 --> <span> <input type="checkbox"
-									checked="checked" id="chkAll1" name="chk1"> <label>전체</label>
-							</span> <span th:each="classCodeName:${classCodeNameList}"> <input
-									type="checkbox" checked="checked"
-									th:value="${classCodeName.cmcdId}" name="chk1"> <label
-									th:text="${classCodeName.cmcdNm}"></label>
-							</span>
-							</td>
-							<!-- regexp로 접근 -->
-						</tr>
-						<tr>
-							<td style="width: 5%;">학생 상태</td>
-							<td style="width: 30%;">
-								<!--리스트 전체선택 2 --> <span> <input type="checkbox"
-									checked="checked" id="chkAll2" name="chk"> <label>전체</label>
-							</span> <span th:each="stdtCodeName:${stdtCodeNameList}"> <input
-									type="checkbox" checked="checked"
-									th:value="${stdtCodeName.cmcdNm}" name="chk2"> <label
-									th:text="${stdtCodeName.cmcdNm}"></label>
-							</span>
-							</td>
-							<!-- regexp로 접근 -->
+							<td style="width: 30%;"><select id="classId"> <option th:each="className:${classNameList}" th:text="${className.clssNm}" th:value="${className.clssId}"></option></select></td>
 							<td style="width: 10%;">기간</td>
-							<td style="width: 55%;"><input type="date" id="startDate"><span>~</span><input
-								type="date" id="endDate"></td>
+							<td style="width: 30%;"><input type="date" id="startDate"><span> ~ </span><input type="date" id="endDate"></td>
 						</tr>
-
 					</table>
 					<!-- 검색 버튼 -->
 				</div>
@@ -99,8 +65,7 @@
 					<td><input type="checkbox" id="chkStdt"></td>
 					<td th:text="${stdtStat.count}"></td>
 					<td th:text="${stdt.stdtNm}"></td>
-					<td th:each="wlogCodeName:${wlogCodeNameList}"
-						th:text="${#strings.substring(#strings.setSplit(stdt.wlogCnt,',')[wlogCodeNameStat.count-1],10,)}">?</td>
+					<td th:each="wlogCodeName:${wlogCodeNameList}" th:text="${#strings.substring(#strings.setSplit(stdt.wlogCnt,',')[wlogCodeNameStat.count-1],10,)}">?</td>
 					<td th:text="${stdt.genderCd}">성별</td>
 					<td th:text="${stdt.birthDd}">생년월일</td>
 					<td th:text="${stdt.userEmail}">이메일</td>
@@ -114,21 +79,12 @@
 	</div>
 
 	<script>
-	//리스트 전체선택1
-	const chkAll1 = document.querySelector("#chkAll1");
-	chkAll1.addEventListener("change", () => {
-		const chkList1 = document.getElementsByName("chk1");
-		for(chk1 of chkList1){
-			chk1.checked = chkAll1.checked;
-		}
-	});
-	
-	//리스트 전체선택2
-	const chkAll2 = document.querySelector("#chkAll2");
-	chkAll2.addEventListener("change", () => {
-		const chkList2 = document.getElementsByName("chk2");
-		for(chk2 of chkList2){
-			chk2.checked = chkAll2.checked;
+	//전체 선택
+	const chkAll = document.getElementsById("chkAllStdt");
+	chkAll.addEventListener("change", () => {
+		const chkList = document.getElementsById("chkStdt");
+		for(chk of chkList){
+			chk.checked = chkAll.checked;
 		}
 	});
 	
@@ -156,11 +112,9 @@
 			success: function(stdtListResponse) {
 				//테이블의 모든 내용을 삭제
 				var stdtListTable = document.getElementById('stdt_list_table_tbody');
-// 				$('#stdt_list_table_tbody').remove();
 				while (stdtListTable.firstChild) {
 					stdtListTable.removeChild(stdtListTable.firstChild);
 				}
-// 				stdtListTable.empty();
 				
 				console.log(stdtListTable);
 				
@@ -170,7 +124,6 @@
 				document.getElementById("stdtCnt").innerHTML=stdtList.length;
 
 				for(let i = 0; i < stdtList.length; i++){
-// 					var newRow = $('<tr>');
 					var newRow = document.createElement("tr");
 					newRow.id="stdt_list_table_row";
 					
@@ -221,10 +174,7 @@
 					console.log(newRow);
 					console.log(stdtListTable);
 					
-// 					stdtListTable.appendChild(newRow);
 					stdtListTable.append(newRow);
-// 					$("#stdt_list_table_tbody").append(newRow);
-// 					stdtListTable.innerHTML=newRow;
 				}
 
 			},error: function(error){
