--- a/KosaESS/src/main/resources/templates/include/student_header.html
+++ b/KosaESS/src/main/resources/templates/include/student_header.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+<head>
+<link rel="icon" href="/img/icon.png" />
+<title>KOSA 교육관리 시스템</title>
+</head>
 <div th:fragment="header">
 	<header>
 		<div class="container">
