--- a/KosaESS/src/main/resources/templates/student/class_detail.html
+++ b/KosaESS/src/main/resources/templates/student/class_detail.html
@@ -4,6 +4,7 @@
 <link th:href="@{/css/student/header.css}" rel="stylesheet">
 <link th:href="@{/css/student/main.css}" rel="stylesheet">
 <link th:href="@{/css/student/class_detail.css}" rel="stylesheet">
+<link rel="icon" href="/img/icon.png" />
 <meta charset="UTF-8">
 <title>class detail</title>
 <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
@@ -58,9 +59,9 @@
 						<h3>교육 주요 내용</h3>
 						<h4 th:text="${classDetail.clssContent}"></h4>
 					</div>
-					<div>
+					<div class="crclTable">
 						<h3>교육 커리큘럼</h3>
-						<table class="crclTable" style="margin-bottom: 10%; width: 100%;">
+						<table>
 							<tr>
 								<th>강의명</th>
 								<th style="width: 20%;">과목명</th>
@@ -81,26 +82,21 @@
 							</tfoot>
 						</table>
 					</div>
-
-					<ul th:each="ClassVO : ${classDetailList}">
-						<li>
-							<div class="icon"
-								th:if="${ClassVO.fileType == 'application' or ClassVO.fileType == 'text'}">
-								<a
-									th:href="@{/student/download/file/__${ClassVO.fileId}__/__${ClassVO.fileSubId}__}"
-									th:title="${ClassVO.fileNm}"> <img style="width: 40px;"
+					<div class="classFile">
+						<ul>
+							<li th:each="FileVO : ${classFileList}"><a
+								th:if="${FileVO.fType == 'image'}"> <img
+									th:src="@{/student/file/__${FileVO.fileId}__/__${FileVO.fileSubId}__}"><br>
+							</a> <a th:if="${FileVO.fType == 'application'}"
+								th:href="@{/download/file/__${FileVO.fileId}__/__${FileVO.fileSubId}__}"
+								th:title="${FileVO.fileNm}"> <img style="width: 40px;"
 									th:src="@{/img/file_icon.png}" alt="file  아이콘"> <span
-									th:text="${ClassVO.fileNm}"></span>
-								</a>
-							</div>
-							<div th:if="${ClassVO.fileType=='image'}">
-								<img style="width: 500px;"
-									th:src="@{/img/__${ClassVO.fileNm}__}">
-							</div>
-						</li>
-					</ul>
-					<h5>기타사항</h5>
-					<h5 th:text="${classDetail.clssEtc}"></h5>
+									th:text="${FileVO.fileNm}"></span>><br>
+							</a></li>
+						</ul>
+						<h5>기타사항</h5>
+						<h5 th:text="${classDetail.clssEtc}"></h5>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -112,10 +108,11 @@
 						<div class="veiwClass1">
 							<span th:text="${class2.cmcdNm}"></span>
 							<h2 th:text="${class2.clssNm}"></h2>
-							<div th:if="${class2.fileNm!=null}">
-								<img th:src="@{/img/__${class2.fileNm}__}">
+							<div th:if="${class2.fileId!=null}">
+								<img
+									th:src="@{/student/file/__${class2.fileId}__/__${class2.fileSubId}__}">
 							</div>
-							<div th:if="${class2.fileNm==null}">
+							<div th:if="${class2.fileId==null}">
 								<img th:src="@{/img/logo.png}">
 							</div>
 							<a class="moveBtn"
@@ -174,6 +171,7 @@
 	<script th:inline="javascript">
 		/* 스크립트 내에서 Thymeleaf 변수를 선언하고 값 할당 */
 		var clssCd = /*[[${classDetail.clssCd}]]*/'';
+		var classId = /*[[${classDetail.clssId}]]*/'';
 	</script>
 	<script>
 		document.addEventListener('DOMContentLoaded', function() {
@@ -185,10 +183,6 @@
 				openModalBtn.style.display = 'block'; // 버튼을 표시
 			}
 		});
-	</script>
-	<script th:inline="javascript">
-		/* 스크립트 내에서 Thymeleaf 변수를 선언하고 값 할당 */
-		var classId = /*[[${classDetail.clssId}]]*/'';
 	</script>
 	<script src="/js/student/class_detail.js"></script>
 </body>
