--- a/KosaESS/src/main/resources/templates/student/notice_list.html
+++ b/KosaESS/src/main/resources/templates/student/notice_list.html
@@ -3,6 +3,7 @@
 <head>
 <link th:href="@{/css/student/header.css}" rel="stylesheet">
 <link th:href="@{/css/student/main.css}" rel="stylesheet">
+<link rel="icon" href="/img/icon.png" />
 <meta charset="UTF-8">
 <title>main page</title>
 </head>
