[seungwoo][#etc] student_list의 교육과정 검색창 고치고, 학생 나오게 연동하기

--- a/KosaESS/src/main/resources/static/css/manager/manager_post_list.css
+++ b/KosaESS/src/main/resources/static/css/manager/manager_post_list.css
@@ -26,6 +26,15 @@ input, progress {
 	margin: 40px;
 }
 
+.title_a {
+	display: inline-block;
+	color: #333333;
+	font-size: 30px;
+	font-weight: bold;
+	margin: 40px;
+	text-decoration: none;
+}
+
 .content_wrap {
 	width: 95%;
 	margin-left: 40px;
