--- a/KosaESS/src/main/resources/templates/manager/class_detail.html
+++ b/KosaESS/src/main/resources/templates/manager/class_detail.html
@@ -4,9 +4,13 @@
 <meta charset="UTF-8">
 </head>
 <head>
+<script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
 <link th:href="@{/css/manager/manager_class_detail.css}"
 	rel="stylesheet" />
 <link th:href="@{/css/manager/manager_post_list.css}" rel="stylesheet">
+<link th:href="@{/css/student/header.css}" rel="stylesheet">
+<link th:href="@{/css/student/main.css}" rel="stylesheet">
+<link th:href="@{/css/student/class_detail.css}" rel="stylesheet">
 </head>
 <body>
 	<!-- 서브바 부분 -->
@@ -20,57 +24,110 @@
 		<!-- content wrap-->
 		<div class="content_wrap">
 			<!-- 검색 필터 부분 -->
-			<div class="container">
-				<!-- 					<div class="content"> -->
+
+			<div class="content">
 				<table>
 					<tr>
 						<th>이름</th>
-						<td th:text="${clss.clssNm}"></td>
+						<td colspan="5" th:text="${clss.clssNm}"></td>
+						<th>교육 상태</th>
+						<td style="width: 10%;" th:text="${clss.cmcdNm}"></td>
 					</tr>
 					<tr>
 						<th>지원 기간</th>
-						<td th:text="|${#dates.format(clss.aplyStartDt, 'yyyy-MM-dd')}  ~ ${#dates.format(clss.aplyEndDt, 'yyyy-MM-dd')}|"></td>
+						<td colspan="2"
+							th:text="${clss.aplyStartDd} + ' ~ ' + ${clss.aplyEndDd}"></td>
+
 						<th>교육 기간</th>
-						<td th:text="|${#dates.format(clss.clssStartDd, 'yyyy-MM-dd')}  ~ ${#dates.format(clss.clssEndDd, 'yyyy-MM-dd')}|"></td>
+						<td colspan="2"
+							th:text="${clss.clssStartDd}+ ' ~ ' + ${clss.clssEndDd}"></td>
+						<th>업무담당자</th>
+						<td th:text="${clss.mngrNm}"></td>
 					</tr>
 					<tr>
-						<th>교육 장소</th>
-						<td th:text="${clss.clssAdr}"></td>
 						<th>회사</th>
-						<td th:text="${clss.cmpyId}"></td>
-						<th>교육 상태</th>
-						<td th:text="${clss.clssCd}"></td>
+						<td colspan="3" th:text="${clss.cmpyNm}"></td>
+						<th>교육 장소</th>
+						<td colspan="3" th:text="${clss.clssAdr}"></td>
+
 					</tr>
 					<tr>
+						<th>총 이수 시간</th>
+						<td th:text="${clss.clssTotalTm} + '시간'"></td>
 						<th>시작 시간</th>
-						<td th:text="${#dates.format(clss.setInTm, 'HH:mm')}"></td>
+						<td th:text="${clss.setInTime} + '시'"></td>
 						<th>종료 시간</th>
-						<td th:text="${#dates.format(clss.setOutTm, 'HH:mm')}"></td>
+						<td th:text="${clss.setOutTime}+ '시'"></td>
 						<th>수강 정원</th>
 						<td>
-							<a th:text="${clss.rgstCnt}" th:href="@{/manager/student?classId=__${clss.clssId}__}"></a>
-							<span th:text="|/ ${clss.limitCnt}|"></span>
+							<a th:text="${clss.rgstCnt}" th:href="@{/manager/student?classId=__${thisClassId}__}"></a>
+							<span th:text="| / ${clss.limitCnt} 명|"></span>
 						</td>
-						<th>업무담당자</th>
-						<td th:text="${clss.mngrId}"></td>
 					</tr>
 				</table>
-				<div class="non_image_wrap">
-				<img class="download_img" src="/img/file_icon.png">
-				<a th:each="item:${NonImageFileInfoList}" th:href="@{/manager/__${clss.fileId}__/__${item.fileSubId}__}" th:text="${item.fileNm}"></a>
+				<div>
+					<div>
+						<h3>교육 주요 내용</h3>
+						<h4 th:text="${clss.clssContent}"></h4>
+					</div>
+					<div class="crclTable">
+						<h3>교육 커리큘럼</h3>
+						<table>
+							<tr>
+								<th>강의명</th>
+								<th style="width: 20%;">과목명</th>
+								<th style="width: 24%;">강사이름</th>
+								<th style="width: 15%;">이수시간</th>
+							</tr>
+							<tr th:each="CurriculumDetailDTO : ${curriculumlist}">
+								<td style="width: 35%;" th:text="${CurriculumDetailDTO.lctrNm}"></td>
+								<td th:text="${CurriculumDetailDTO.sbjtNm}"></td>
+								<td th:text="${CurriculumDetailDTO.profNm}"></td>
+								<td class="lctrTm" th:text="${CurriculumDetailDTO.lctrTm}"></td>
+							</tr>
+							<tfoot>
+								<tr>
+									<th colspan="3">총 이수 시간</th>
+									<td class="lctrTotalTm"></td>
+								</tr>
+							</tfoot>
+						</table>
+					</div>
+					<div class="classFile">
+						<ul>
+							<li th:each="FileVO : ${classFileList}"><a
+								th:if="${FileVO.fType == 'image'}"> <img
+									th:src="@{/student/file/__${FileVO.fileId}__/__${FileVO.fileSubId}__}"><br>
+							</a> <a th:if="${FileVO.fType != 'image'}"
+								th:href="@{/download/file/__${FileVO.fileId}__/__${FileVO.fileSubId}__}"
+								th:title="${FileVO.fileNm}"> <img style="width: 40px;"
+									th:src="@{/img/file_icon.png}" alt="file  아이콘"> <span
+									th:text="${FileVO.fileNm}"></span>><br>
+							</a></li>
+						</ul>
+					</div>
 				</div>
-				<div th:each="item:${imageFileSubIdList}" class="image_wrap">
-					<img th:src="@{/manager/__${clss.fileId}__/__${item}__}">
-				</div>
-				<div class="class_content_wrap">
-					<div th:utext="${clss.clssContent}"></div>
-				</div>
-				<div class="go_to_list_btn_wrap">
-					<input type="button" value="목록" class="go_to_list_btn"th:onclick="|location.href='@{/manager/class}'|">
-				</div>
+			</div>
+
+			<div class="go_to_list_btn_wrap">
+				<input type="button" value="목록" class="go_to_list_btn"
+					th:onclick="|location.href='@{/manager/class}'|">
 			</div>
 		</div>
 	</div>
-	<!-- 		</div> -->
+	<script>
+		let totalLctrTm = 0;
+
+		//각 lctrTm 값을 가져와서 totalLctrTm에 더합니다.
+		document.querySelectorAll('.lctrTm').forEach(function(element) {
+			const lctrTmValue = parseInt(element.textContent);
+			if (!isNaN(lctrTmValue)) {
+				totalLctrTm += lctrTmValue;
+			}
+		});
+
+		//총 이수 시간을 결과를 담고 있는 요소에 설정합니다.
+		document.querySelector('.lctrTotalTm').textContent = totalLctrTm;
+	</script>
 </body>
 </html>
