--- a/KosaESS/src/main/resources/static/css/manager/manager_class_detail.css
+++ b/KosaESS/src/main/resources/static/css/manager/manager_class_detail.css
@@ -39,7 +39,7 @@ table th {
 }
 
 .content_wrap {
-	display: flex;
+/* 	display: flex; */
 	justify-content: center;
 /* 	border-style: groove; */
 /* 	border-color: blue; */
@@ -66,7 +66,7 @@ table th {
 	border-width: 5px;
 }
 .image_wrap {
-	display: flex;
+/* 	display: flex; */
 	justify-content: center;
 	margin:3px;
 }
